--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,21 +17,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TourTripGuide"
         tools:targetApi="31">
+
+
+        <activity
+            android:name=".activities.TicketManagerActivity"
+            android:exported="false"
+            android:parentActivityName=".activities.MainActivity"/>
         <activity
             android:name=".activities.PrivacyPolicyActivity"
             android:exported="false"
-            android:parentActivityName=".activities.MainActivity"
-            />
+            android:parentActivityName=".activities.MainActivity" />
         <activity
             android:name=".activities.DhakaSomeDataActivity"
             android:exported="false"
-            android:parentActivityName=".activities.DhakaActivity"
-            />
+            android:parentActivityName=".activities.DhakaActivity" />
         <activity
             android:name=".activities.DhakaActivity"
             android:exported="false"
-            android:parentActivityName=".activities.MainActivity"
-            />
+            android:parentActivityName=".activities.MainActivity" />
         <activity
             android:name=".activities.MainActivity"
             android:exported="false" />
@@ -44,6 +47,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
     </application>
 
 </manifest>
