--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -25,7 +24,7 @@
         android:theme="@style/Theme.TourTripGuide"
         tools:targetApi="31">
         <activity
-            android:name=".UploadTicketActivity"
+            android:name=".activities.UploadTicketActivity"
             android:exported="false" />
         <activity
             android:name=".activities.WeatherActivity"
@@ -36,7 +35,7 @@
             android:exported="false"
             android:parentActivityName=".activities.WeatherActivity" />
         <activity
-            android:name=".activities.TicketManagerActivity"
+            android:name=".TicketManagerActivity"
             android:exported="false"
             android:parentActivityName=".activities.MainActivity" />
         <activity
