--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
     <uses-permission
         android:name="android.permission.ACCESS_FINE_LOCATION"
         tools:ignore="CoarseFineLocation" />
-
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -24,8 +24,13 @@
         android:theme="@style/Theme.TourTripGuide"
         tools:targetApi="31">
         <activity
+            android:name=".activities.NearbyPlaceActivity"
+            android:exported="false"
+            android:parentActivityName=".activities.MainActivity"/>
+        <activity
             android:name=".activities.UploadTicketActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".TicketManagerActivity" />
         <activity
             android:name=".activities.WeatherActivity"
             android:exported="false"
@@ -62,8 +67,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
     </application>
 
 </manifest>
