--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.loopj.android:android-async-http:1.4.11'
+    implementation 'com.google.android.libraries.places:places:3.2.0'
     testImplementation 'junit:junit:4.13.2'
 
 
@@ -44,6 +45,10 @@ dependencies {
     // dependency
     /*smooth bottom bar*/
     implementation 'com.github.ibrahimsn98:SmoothBottomBar:1.7.9'
+
+    /*location dependency*/
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 
     /*glide*/
     implementation 'com.github.bumptech.glide:glide:4.15.1'
