--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,9 +24,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TourTripGuide"
         tools:targetApi="31">
-        <activity
-            android:name=".AddUpdateRecordActivity"
-            android:exported="false" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -37,9 +34,9 @@
             android:exported="false"
             android:parentActivityName=".activities.MainActivity" />
         <activity
-            android:name=".UploadTicketActivity"
+            android:name=".activities.UploadTicketActivity"
             android:exported="false"
-            android:parentActivityName=".TicketManagerActivity" />
+            android:parentActivityName=".activities.TicketManagerActivity" />
         <activity
             android:name=".activities.WeatherActivity"
             android:exported="false"
@@ -49,7 +46,7 @@
             android:exported="false"
             android:parentActivityName=".activities.WeatherActivity" />
         <activity
-            android:name=".TicketManagerActivity"
+            android:name=".activities.TicketManagerActivity"
             android:exported="false"
             android:parentActivityName=".activities.MainActivity" />
         <activity
