--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,12 +25,19 @@
         android:theme="@style/Theme.TourTripGuide"
         tools:targetApi="31">
 
+        <receiver android:name=".ConnectionRecevier"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+            </intent-filter>
+        </receiver>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_map_key" />
 
         <activity
-            android:name=".activities.NearbyPlaceActivity"
+            android:name=".activities.NotificationActivity"
             android:exported="false"
             android:parentActivityName=".activities.MainActivity" />
         <activity
